<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F3C7C7"
    tools:context=".Friends.FriendActivity"
    android:id="@+id/friendPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#E55E5E"
        android:id="@+id/mainHeader">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:text="FRIENDS"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold|italic" />

    </RelativeLayout>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tabSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainHeader"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0.95"
            android:background="@drawable/back_tabs">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/select"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/back_select"
                    android:text="" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Friends"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/item2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Add Friend" />

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/tabSelector"
        android:id="@+id/searchHeader"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="center">

        <android.widget.SearchView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.90"
            android:layout_below="@id/tabSelector"
            android:id="@+id/searchBar"
            android:background="@drawable/textview_border"
            android:iconifiedByDefault="false"
            android:focusable="true"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchHeader"
        android:id="@+id/recyclerTitle"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/titleBar"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.85"
            android:background="#E55E5E"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="USERNAME"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold|italic"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:id="@+id/gamesPlayedtxt"
                android:text="Games Played"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold|italic"

                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/recyclerTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friendsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="550dp"
            android:layout_gravity="center_horizontal"

            android:layout_weight="0.85"

            >

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</RelativeLayout>