<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="0dp"
    android:elevation="100dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="1"
        android:background="#FADFE8"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:id="@+id/rankingTxt"
            android:text="1"
            android:gravity="center"
            android:background="@color/black"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.70"
            android:text="username"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:id="@+id/userNameTxt"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="ADD"
            android:id="@+id/addFriendBtn"
            android:background="@drawable/textview_border"
            android:backgroundTint="#E55E5E"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
</androidx.cardview.widget.CardView>